# Casper-Code

./: .abacus.donotdelete  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEVOPS_SETUP_SUMMARY.md  DOCUMENTATION_SUMMARY.md  MASTER_CHANGELOG.md  PROJECT_STRUCTURE.txt  README.md  docker-compose.dev.yml  docker-compose.yml
AdminPanel-php/: .gitignore  api-5954894522699629267-424023-8598f41da41b.json  composer.json  cron.sh  dev-notes.md  g.bat  oauth_creds.json  package-lock.json  package.json  routes.txt  sample.json  webpack.mix.js
Android/: android-versions.txt  build.gradle  config  gradle.properties  settings.gradle  signature.jks
CasperVPN-Dev-Master/: README.md  test.txt
CasperVPN-Dev-Master-RUST/casper-agent/: .env.example  .gitignore  Cargo.toml  INSTALLATION.md  README.md  TESTING.md  install.sh  uninstall.sh
CasperVPN-Dev-Master-RUST/casper-agent/src/: main.rs
CasperVPN-Dev-Master-RUST/casper-agent/src/api/: client.rs  models.rs
CasperVPN-Dev-Master-RUST/casper-agent/src/checks/: protocols.rs
CasperVPN-Dev-Master-RUST/casper-agent/src/provision/: l2tp.rs  mod.rs  openvpn.rs  strongswan.rs  wireguard.rs
CasperVPN-Dev-Master-RUST/casper-agent/src/utils/: config.rs  metrics.rs  mod.rs  system.rs
CasperVPN-Dev-Mobile/: CasperVPN.sln
CasperVPN-admin-new/: .gitignore  package-lock.json
admin-panel-php-laravel/: Dockerfile  composer.json
admin-panel-react/: .env.example  .gitignore  Dockerfile  nginx.conf  package.json
backend-dotnet-core/: CasperVPN.csproj  Dockerfile  Program.cs  appsettings.json
config/: development.env  staging.env  (+1 more)
(+1189 files in other folders)
